--- a/src/Aetherbridge/Aetherbridge.csproj
+++ b/src/Aetherbridge/Aetherbridge.csproj
@@ -36,9 +36,6 @@
     <Reference Include="Advanced Combat Tracker">
       <HintPath>..\..\lib\Advanced Combat Tracker.exe</HintPath>
     </Reference>
-    <Reference Include="CrescentCove">
-      <HintPath>..\..\..\CrescentCove\src\CrescentCove\bin\Release\CrescentCove.dll</HintPath>
-    </Reference>
     <Reference Include="FFXIV_ACT_Plugin.Common">
       <HintPath>..\..\lib\FFXIV_ACT_Plugin.Common.dll</HintPath>
     </Reference>
@@ -115,6 +112,9 @@
   <ItemGroup>
     <PackageReference Include="Costura.Fody">
       <Version>4.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="CrescentCove">
+      <Version>0.1.3</Version>
     </PackageReference>
     <PackageReference Include="Fody">
       <Version>6.0.5</Version>
