--- a/src/Aetherbridge/Aetherbridge.csproj
+++ b/src/Aetherbridge/Aetherbridge.csproj
@@ -33,7 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Advanced Combat Tracker">
+    <Reference Include="Advanced Combat Tracker, Version=3.4.5.265, Culture=neutral, PublicKeyToken=a946b61e93d97868, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Advanced Combat Tracker.exe</HintPath>
     </Reference>
     <Reference Include="FFXIV_ACT_Plugin.Common">
@@ -47,11 +48,19 @@
   <ItemGroup>
     <Compile Include="Aetherbridge.cs" />
     <Compile Include="FFXIV_ACT_Plugin\IFFXIVACTPluginWrapper.cs" />
+    <Compile Include="FFXIV_ACT_Plugin\LogLineParser\JALogLineParser.cs" />
+    <Compile Include="FFXIV_ACT_Plugin\LogLineParser\FRLogLineParser.cs" />
+    <Compile Include="FFXIV_ACT_Plugin\LogLineParser\DELogLineParser.cs" />
+    <Compile Include="FFXIV_ACT_Plugin\LogLineParser\LogLineParserBase.cs" />
+    <Compile Include="FFXIV_ACT_Plugin\LogLineParser\ENLogLineParser.cs" />
+    <Compile Include="FFXIV_ACT_Plugin\LogLineParser\ILogLineParser.cs" />
     <Compile Include="IAetherbridge.cs" />
     <Compile Include="Model\AetherbridgeConfig\AetherbridgeConfig.cs" />
     <Compile Include="Model\AetherbridgeConfig\IAetherbridgeConfig.cs" />
     <Compile Include="Model\Content\IContent.cs" />
     <Compile Include="Model\Content\Content.cs" />
+    <Compile Include="Model\DraftItem\DraftItem.cs" />
+    <Compile Include="Model\DraftItem\IDraftItem.cs" />
     <Compile Include="Model\Player\PlayerMapper.cs" />
     <Compile Include="Model\Item\IItem.cs" />
     <Compile Include="Model\Item\Item.cs" />
@@ -65,7 +74,6 @@
     <Compile Include="Service\ClassJob\ClassJobService.cs" />
     <Compile Include="Service\ClassJob\ClassJobMapper.cs" />
     <Compile Include="Service\ClassJob\IClassJobService.cs" />
-    <Compile Include="FFXIV_ACT_Plugin\LogLineParser\ILogLineParser.cs" />
     <Compile Include="Model\ACTLogLineEvent\ACTLogLineEvent.cs" />
     <Compile Include="ACT\ACTWrapper.cs" />
     <Compile Include="Model\ACTLogLineEvent\IACTLogLineEvent.cs" />
@@ -80,7 +88,6 @@
     <Compile Include="Model\World\IWorld.cs" />
     <Compile Include="Model\Zone\IZone.cs" />
     <Compile Include="Model\Language\Language.cs" />
-    <Compile Include="FFXIV_ACT_Plugin\LogLineParser\LogLineParser.cs" />
     <Compile Include="Model\PartyType\PartyTypeEnum.cs" />
     <Compile Include="Model\Player\Player.cs" />
     <Compile Include="Model\World\World.cs" />
@@ -96,6 +103,9 @@
     <Compile Include="Service\Item\ItemMapper.cs" />
     <Compile Include="Service\Item\ItemService.cs" />
     <Compile Include="Service\Content\ContentService.cs" />
+    <Compile Include="Service\Language\LanguageService.cs" />
+    <Compile Include="Service\Language\ILanguageService.cs" />
+    <Compile Include="Service\Language\LanguageMapper.cs" />
     <Compile Include="Service\Location\ILocationService.cs" />
     <Compile Include="Service\Location\LocationService.cs" />
     <Compile Include="Service\World\IWorldService.cs" />
@@ -114,7 +124,7 @@
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="CrescentCove">
-      <Version>0.1.3</Version>
+      <Version>0.1.6</Version>
     </PackageReference>
     <PackageReference Include="Fody">
       <Version>6.0.5</Version>
