--- a/src/Aetherbridge.Test/Aetherbridge.Test.csproj
+++ b/src/Aetherbridge.Test/Aetherbridge.Test.csproj
@@ -42,10 +42,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Advanced Combat Tracker.exe</HintPath>
     </Reference>
-    <Reference Include="CrescentCove, Version=0.1.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\CrescentCove\src\CrescentCove\bin\Release\CrescentCove.dll</HintPath>
-    </Reference>
     <Reference Include="FFXIV_ACT_Plugin.Common, Version=2.0.2.2, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\FFXIV_ACT_Plugin.Common.dll</HintPath>
@@ -79,6 +75,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CrescentCove">
+      <Version>0.1.6</Version>
+    </PackageReference>
     <PackageReference Include="NUnit">
       <Version>3.12.0</Version>
     </PackageReference>
