remove extra interfaces

--- a/src/Aetherbridge/Aetherbridge.csproj
+++ b/src/Aetherbridge/Aetherbridge.csproj
@@ -55,62 +55,43 @@
     <Compile Include="FFXIV_ACT_Plugin\LogLineParser\ENLogLineParser.cs" />
     <Compile Include="FFXIV_ACT_Plugin\LogLineParser\ILogLineParser.cs" />
     <Compile Include="IAetherbridge.cs" />
-    <Compile Include="Model\AetherbridgeConfig\AetherbridgeConfig.cs" />
-    <Compile Include="Model\AetherbridgeConfig\IAetherbridgeConfig.cs" />
-    <Compile Include="Model\Content\IContent.cs" />
-    <Compile Include="Model\Content\Content.cs" />
-    <Compile Include="Model\DraftItem\DraftItem.cs" />
-    <Compile Include="Model\DraftItem\IDraftItem.cs" />
-    <Compile Include="Model\Player\PlayerMapper.cs" />
-    <Compile Include="Model\Item\IItem.cs" />
-    <Compile Include="Model\Item\Item.cs" />
-    <Compile Include="Model\Location\ILocation.cs" />
-    <Compile Include="Model\Location\Location.cs" />
-    <Compile Include="Model\PlaceName\PlaceName.cs" />
-    <Compile Include="Model\PlaceName\IPlaceName.cs" />
-    <Compile Include="Model\XIVEventSubType\XIVEventSubType.cs" />
-    <Compile Include="Model\XIVEventType\XIVEventType.cs" />
-    <Compile Include="Model\XIVEvent\XIVEvent.cs" />
-    <Compile Include="Service\ClassJob\ClassJobService.cs" />
-    <Compile Include="Service\ClassJob\ClassJobMapper.cs" />
-    <Compile Include="Service\ClassJob\IClassJobService.cs" />
-    <Compile Include="Model\ACTLogLineEvent\ACTLogLineEvent.cs" />
+    <Compile Include="Model\AetherbridgeConfig.cs" />
+    <Compile Include="Model\Content.cs" />
+    <Compile Include="Model\DraftItem.cs" />
+    <Compile Include="Model\PlayerMapper.cs" />
+    <Compile Include="Model\Item.cs" />
+    <Compile Include="Model\Location.cs" />
+    <Compile Include="Model\PlaceName.cs" />
+    <Compile Include="Model\XIVEventSubType.cs" />
+    <Compile Include="Model\XIVEventType.cs" />
+    <Compile Include="Model\XIVEvent.cs" />
+    <Compile Include="Service\ClassJobService.cs" />
+    <Compile Include="Service\ClassJobMapper.cs" />
+    <Compile Include="Model\ACTLogLineEvent.cs" />
     <Compile Include="ACT\ACTWrapper.cs" />
-    <Compile Include="Model\ACTLogLineEvent\IACTLogLineEvent.cs" />
     <Compile Include="ACT\IACTWrapper.cs" />
-    <Compile Include="Model\ClassJob\ClassJob.cs" />
-    <Compile Include="Model\ClassJob\IClassJob.cs" />
+    <Compile Include="Model\ClassJob.cs" />
     <Compile Include="FFXIV_ACT_Plugin\FFXIVACTPluginWrapper.cs" />
-    <Compile Include="Model\Language\ILanguage.cs" />
-    <Compile Include="Model\LogLineEvent\LogLineEvent.cs" />
-    <Compile Include="Model\LogLineEvent\ILogLineEvent.cs" />
-    <Compile Include="Model\Player\IPlayer.cs" />
-    <Compile Include="Model\World\IWorld.cs" />
-    <Compile Include="Model\Zone\IZone.cs" />
-    <Compile Include="Model\Language\Language.cs" />
-    <Compile Include="Model\PartyType\PartyTypeEnum.cs" />
-    <Compile Include="Model\Player\Player.cs" />
-    <Compile Include="Model\World\World.cs" />
-    <Compile Include="Model\Zone\Zone.cs" />
+    <Compile Include="Model\LogLineEvent.cs" />
+    <Compile Include="Model\Language.cs" />
+    <Compile Include="Model\PartyTypeEnum.cs" />
+    <Compile Include="Model\Player.cs" />
+    <Compile Include="Model\World.cs" />
+    <Compile Include="Model\Zone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Service\Content\IContentService.cs" />
-    <Compile Include="Service\Item\IItemService.cs" />
-    <Compile Include="Service\Item\ItemMapper.cs" />
-    <Compile Include="Service\Item\ItemService.cs" />
-    <Compile Include="Service\Content\ContentService.cs" />
-    <Compile Include="Service\Language\LanguageService.cs" />
-    <Compile Include="Service\Language\ILanguageService.cs" />
-    <Compile Include="Service\Language\LanguageMapper.cs" />
-    <Compile Include="Service\Location\ILocationService.cs" />
-    <Compile Include="Service\Location\LocationService.cs" />
-    <Compile Include="Service\World\IWorldService.cs" />
-    <Compile Include="Service\World\WorldMapper.cs" />
-    <Compile Include="Service\World\WorldService.cs" />
+    <Compile Include="Service\ItemMapper.cs" />
+    <Compile Include="Service\ItemService.cs" />
+    <Compile Include="Service\ContentService.cs" />
+    <Compile Include="Service\LanguageService.cs" />
+    <Compile Include="Service\LanguageMapper.cs" />
+    <Compile Include="Service\LocationService.cs" />
+    <Compile Include="Service\WorldMapper.cs" />
+    <Compile Include="Service\WorldService.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
