--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,7 +3,7 @@ update_configs:
   - package_manager: "dotnet:nuget"
     directory: "/"
     update_schedule: "live"
-    target_branch: "develop"
+    target_branch: "master"
     automerged_updates:
       - match:
           dependency_type: "all"
